add new cluster_proof_type field
