# app/api/v0/clusters/route.ts
@@ -11,7 +11,7 @@ export const GET = withAuth(async ({ client, user }) => {
   const { data, error } = await client
     .from("clusters")
     .select(
-      "cluster_id, cluster_name, cluster_description, cluster_hardware, cluster_cycle_type"
+      "cluster_id, cluster_name, cluster_description, cluster_hardware, cluster_cycle_type, cluster_proof_type"
     )
     .eq("user_id", user.id)
 
@@ -49,6 +49,7 @@ export const POST = withAuth(async ({ request, client, user }) => {
     cluster_hardware,
     cluster_configuration,
     cluster_cycle_type,
+    cluster_proof_type,
   } = clusterPayload
 
   // get & validate instance type ids
@@ -77,6 +78,7 @@ export const POST = withAuth(async ({ request, client, user }) => {
       cluster_description,
       cluster_hardware,
       cluster_cycle_type,
+      cluster_proof_type,
       user_id: user.id,
     })
     .select("id, cluster_id")
