# lib/zod/schemas/cluster.ts
@@ -6,39 +6,41 @@ export const ClusterSchema = z.object({
   cluster_description: z.string().optional(),
   cluster_hardware: z.string().optional(),
   cluster_cycle_type: z.string().optional(),
+  cluster_proof_type: z.string().optional(),
 })
 
 export const createClusterSchema = z.object({
-  cluster_name: z
-    .string()
-    .max(50)
-    .describe('Human-readable name (e.g., "ZKnight-01", "SNARK-Sentinel")'),
-  cluster_description: z
-    .string()
-    .max(200)
-    .optional()
-    .describe('Description of the cluster (e.g., "Primary RISC-V prover")'),
-  cluster_hardware: z
-    .string()
-    .max(200)
-    .optional()
-    .describe(
-      'Technical specifications (e.g., "RISC-V Prover", "STARK-to-SNARK Prover")'
-    ),
-  cluster_cycle_type: z
-    .string()
-    .max(50)
-    .optional()
-    .describe('Type of cycle (e.g., "SP1")'),
+  cluster_name: z.string().max(50).openapi({
+    description: "Human-readable name. Main display name in the UI",
+    example: "ZKnight-01",
+  }),
+  cluster_description: z.string().max(200).optional().openapi({
+    description: "Description of the cluster",
+    example: "Primary RISC-V prover",
+  }),
+  cluster_hardware: z.string().max(200).optional().openapi({
+    description: "Technical specifications",
+    example: "RISC-V Prover",
+  }),
+  cluster_cycle_type: z.string().max(50).optional().openapi({
+    description: "Type of cycle",
+    example: "SP1",
+  }),
+  cluster_proof_type: z.string().max(50).optional().openapi({
+    description: "Type of proofs to be generated",
+    example: "STARK",
+  }),
   cluster_configuration: z
     .array(
       z.object({
-        instance_type: z
-          .string()
-          .describe(
-            "Instance type (e.g., 'c5.xlarge'). Check our aws instance pricing endpoint for available instance types"
-          ),
-        instance_count: z.number().describe("Number of instances of this type"),
+        instance_type: z.string().openapi({
+          description: "Instance type",
+          example: "c5.xlarge",
+        }),
+        instance_count: z.number().openapi({
+          description: "Number of instances of this type",
+          example: 10,
+        }),
       })
     )
     .describe("Cluster configuration"),
